--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.552.0",
-    "next": "15.3.2",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -35,7 +35,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "^15.3.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
